修复部分功能
